Redirect for mobile fix and color contrast

--- a/mobile/assets/css/style.css
+++ b/mobile/assets/css/style.css
@@ -287,6 +287,7 @@ input:checked + .slider:before {
   background-color: #800080;
   font-size: 90%;
   width: 80vw;
+  color: #FFFACD;
   padding: .5rem;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
